minio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: index-ingress
  namespace: minio
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
  - hosts:
    - minio.bright-resume.com
    - minio-api.bright-resume.com
    secretName: minio-certificate-secret
  rules:
  - host: minio.bright-resume.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: minio-service
            port: 
              number: 9090
  - host: minio-api.bright-resume.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: minio-service
            port: 
              number: 9000
